--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div>
-        <img class="img" src="panaweb.jpg">
+        <!-- <img class="img" src="panaweb.jpg"> -->
         <header class="div">
             <div class="top"><div class="icons">
                 <div class="circle"><box-icon name='facebook' type='logo' color='#ffffff' ></box-icon></div>
@@ -242,10 +242,7 @@ fshguhdamet consectetur adipis
 <div  style="width: 100%;">
   <img class="img" src="./pics/010361c9-53fd-41ba-8350-ca05ffe69107.jfif" alt="">
 </div>
-<div class="skills">
-  <div class="ours"><h1 style="font-size: 45px;">OUR <span style="color: #668c19;">PROCESS</span></h1>
-  <pre style="color: #c4c2c2;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore perferendis
-     facere qui voluptates vitae, doloremque modi? Cupiditate itaque odit ipsam?</pre></div>
+
 </div>
  
 
